--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Онлайн-кинотеатр</title>
   </head>
-  <body>
+  <body class="bg-main">
     <div id="app"></div>
   </body>
 </html>
